@@ -1,3 +1,9 @@
+2012-12-21  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm,
+	  lib/PandoraFMS/DataServer.pm,
+	  util/pandora_db.pl: Implemented a real not-init status. Small fixes.
+
 2012-12-19  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Return async modules to normal after
